public/stylesheets/haunts.css
body {
  margin: 50px;
}

h1 {
  color: var(--pumpkin);
  margin-top: 10px;
  margin-bottom: 10px;
}

h2 {
  font-size: 20px;
}

#haunts-container {
  display: flex;
  flex-direction: column;

  box-shadow: 0 0 15px 10px var(--bistro);
  background-color: var(--bistro);

  margin-bottom: 20px;
}

.category-containers {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
}

.hauntCard {
  padding: 5px;
  gap: 1px;
}

.haunt-score {
  text-align: left;
}

.haunt-links {
  position: relative;
  text-decoration: none;
}

img {
  height: 300px;
  width: 350px;
  box-shadow: 0 0 20px var(--xanadu);
}

img:hover {
  box-shadow: 0px 0px 12px var(--pumpkin);
}

/* li {
  display: flex;
  list-style-type: none;
} */

/* .Historical {
  float: left;
  width: 33.33%;
  padding: 5px;
  text-align: left;
}

.Outdoors {
  float: left;
  width: 33.33%;
  padding: 5px;
}

.Asylum {
  float: left;
  width: 33.33%;
  padding: 5px;
} */

